Login/Register ve Navbar Form&Event

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <app-root></app-root>
+	</body>
 </body>
 </html>
+<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
